add JetBrains vim plugin, rename action.

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,4 +1,4 @@
 map gf :action GotoImplementation <CR>
 map gk :action VimMotionNextTab <CR>
 map gj :action VimMotionPreviousTab <CR>
-
+map gr :action RenameElement <CR>
