添加标签页的跳转映射。

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,3 +3,5 @@ map gk  :action VimMotionNextTab <CR>
 map gj  :action VimMotionPreviousTab <CR>
 map gr  :action RenameElement <CR>
 map gu	:action FindUsages <CR>
+map J gj
+map K gk
